[package]
name = "lesserbase"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[lib]
name = "lesserbase"
path = "lib.rs"

[[bin]]
name = "lesserbase"
path = "main.rs"

# [[bin]]
# name = "lesserbase-server"
# path = "server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
structopt = "0.3"
hex = "0.4"
anyhow = "1.0"
blake3 = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { git = "https://github.com/sgued/bytes", branch = "byte-array" }
serde_json = "1.0"
jsonschema = "0.16"
rmp-serde = "1"
rmpv = "1"
toml = "0.5"
mongodb = "2.2"
