[package]
name = "lesserbase-core"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[lib]
name = "lesserbase"
path = "lib.rs"

[dependencies]
hex = "0.4"
anyhow = "1.0"
blake3 = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { git = "https://github.com/sgued/bytes", branch = "byte-array" }
serde_json = "1.0"
jsonschema = { version = "0.16", default-features = false }
rmp-serde = "1"
rmpv = "1"
toml = "0.5"
